[gd_scene load_steps=5 format=3 uid="uid://bmfweuf062td6"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_w3512"]
[ext_resource type="FontFile" uid="uid://b4pqfbvte11k6" path="res://Assets/VT323-Regular.ttf" id="2_duk5b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ktyr"]
bg_color = Color(0.984314, 0, 0.984314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ww4k1"]
bg_color = Color(0.364706, 0.411765, 0.141176, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_w3512")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LifesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_duk5b")
theme_override_font_sizes/font_size = 32
text = "Lifes: 3"

[node name="LevelWonContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelWonContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ktyr")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelWonContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "GO TOUCH GRASS BUT YOU WON :("
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelWonButton" type="Button" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "GO NEXT LEVEL RIGHT NEOW >:("

[node name="LevelLostContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ww4k1")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelLostContainer/Panel"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 300.0
alignment = 1

[node name="Label" type="Label" parent="LevelLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU SUCK SO MUCH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLostButton" type="Button" parent="LevelLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "RESTART THE LEVEL RIGHT NEOW!!!"

[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer/LevelWonButton" to="." method="_on_level_won_button_pressed"]
[connection signal="pressed" from="LevelLostContainer/Panel/VBoxContainer/LevelLostButton" to="." method="_on_level_lost_button_pressed"]
